--- a/words/matlab.html
+++ b/words/matlab.html
@@ -15,10 +15,11 @@ https://www.iconfinder.com/marcosebald
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="description" content="Web development examples. Uses SlidesJS, a simple slideshow plugin for jQuery.">
+<link rel="icon" type="image/png" href="https://cloud.githubusercontent.com/assets/16012579/12364939/3f4a9e84-bb97-11e5-906c-40af48fdf731.png" sizes="16x16" />
+<meta name="description" content="Examples of Matlab code">
 <meta name="viewport" content="width=device-width">
-<title>web dev examples</title>
-<meta name="keywords" content="Web Development" />
+<title>Matlab examples</title>
+<meta name="keywords" content="Matlab" />
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="../default.css" rel="stylesheet" type="text/css" media="all" />
@@ -37,8 +38,8 @@ https://www.iconfinder.com/marcosebald
 		<div id="menu">
 			<ul>
 				<li><a href="../index.html" accesskey="1" title="">Homepage</a></li>
-				<li><a href="../works.html" accesskey="2" title="">Works</a></li>
-				<li class="active"><a href="../words.html" accesskey="3" title="">Words</a></li>
+				<li><a href="../works/works.html" accesskey="2" title="">Works</a></li>
+				<li class="active"><a href="words.html" accesskey="3" title="">Words</a></li>
 				<li><a href="../contact.html" accesskey="4" title="">Waterfall</a></li>
 			</ul>
 		</div>
@@ -47,20 +48,21 @@ https://www.iconfinder.com/marcosebald
 <div id="wrapper1">
  	<h1>Matlab</h1>
 	<HR color="#AAAAAA">
+	<div class="buffer"></div>
 
- 	<h1>Runge-Kutta Method</h1>
+ 	<h2>Runge-Kutta Method</h2>
 	<script src="https://gist.github.com/ConnorSprague/753419be5b39a8319b9b.js"></script>
 	<div class="buffer"></div>
 	
-	<h1>Navier-Stokes Method</h1>
+	<h2>Navier-Stokes Method</h2>
 	<script src="https://gist.github.com/ConnorSprague/753419be5b39a8319b9b.js"></script>
 	<div class="buffer"></div>
 	
-	<h1>Newtons Method</h1>
+	<h2>Newtons Method</h2>
 	<script src="https://gist.github.com/ConnorSprague/753419be5b39a8319b9b.js"></script>
 	<div class="buffer"></div>
 	
-	<h1>Eulers Method</h1>
+	<h2>Eulers Method</h2>
 	<script src="https://gist.github.com/ConnorSprague/753419be5b39a8319b9b.js"></script>
 	<div class="buffer"></div>
 </div>
