--- a/words/web.html
+++ b/words/web.html
@@ -16,6 +16,7 @@ https://www.iconfinder.com/marcosebald
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="icon" type="image/png" href="https://cloud.githubusercontent.com/assets/16012579/12364939/3f4a9e84-bb97-11e5-906c-40af48fdf731.png" sizes="16x16" />
 <meta name="description" content="Web development examples. Uses SlidesJS, a simple slideshow plugin for jQuery.">
 <meta name="viewport" content="width=device-width">
 <title>web dev examples</title>
@@ -38,8 +39,8 @@ https://www.iconfinder.com/marcosebald
 		<div id="menu">
 			<ul>
 				<li><a href="../index.html" accesskey="1" title="">Homepage</a></li>
-				<li><a href="../works.html" accesskey="2" title="">Works</a></li>
-				<li class="active"><a href="../words.html" accesskey="3" title="">Words</a></li>
+				<li><a href="../works/works.html" accesskey="2" title="">Works</a></li>
+				<li class="active"><a href="words.html" accesskey="3" title="">Words</a></li>
 				<li><a href="../contact.html" accesskey="4" title="">Waterfall</a></li>
 			</ul>
 		</div>
@@ -47,7 +48,10 @@ https://www.iconfinder.com/marcosebald
 </div>
 <div id="wrapper1">
  	<h1>Hackathon For Humanity-CharityMe Webpage</h1>
- 	<p>Description: CharityMe was a mobile and web based service designed for the Missouri University of Science and Technology's 50th Anniversary Hackathon. The goal of the Project was to create a web or mobile service that bettered society. Our team created a service that would allow for users to post, browse, and search for charities. These charities could include institutions or individual users offering up goods or services for free. The idea was to make a 'craigslist' type service that was focused entirely around free goods and services.</p>
+	<HR color="#AAAAAA">
+ 	<p>Description: CharityMe is a mobile and web based service designed for the Missouri University of Science and Technology's 50th Anniversary Hackathon. The goal of the Project was to create a web or mobile service that bettered society. 
+	Our team created a service that would allow for users to post, browse, and search for charities. These charities could include institutions or individual users offering up goods or services for free. 
+	The idea was to make a 'craigslist' type service that was focused entirely around free goods and services.</p>
   <!-- The container is used to define the width of the slideshow -->
   <div class="container">
     <div id="slides">
@@ -86,7 +90,7 @@ https://www.iconfinder.com/marcosebald
   </script>
 
  	<h1>Page Code</h1>
- 	<p>Below is the source code for the webpage.</p>
+ 	<p>Webpage Code</p>
 	<script src="https://gist.github.com/ConnorSprague/753419be5b39a8319b9b.js"></script>
 </div>
 
