--- a/words/web.html
+++ b/words/web.html
@@ -89,8 +89,8 @@ https://www.iconfinder.com/marcosebald
     });
   </script>
 
- 	<h1>Page Code</h1>
- 	<p>Webpage Code</p>
+ 	<h1>Webpage Code</h1>
+	<HR color="#AAAAAA">
 	<script src="https://gist.github.com/ConnorSprague/753419be5b39a8319b9b.js"></script>
 </div>
 
