--- a/words/android.html
+++ b/words/android.html
@@ -30,8 +30,8 @@ https://www.iconfinder.com/marcosebald
 </head>
 <body>
 
-<img src="https://mitchrappfan.files.wordpress.com/2015/05/under-construction.gif">
-<!-->
+<img class="image-center" src="https://mitchrappfan.files.wordpress.com/2015/05/under-construction.gif" >
+<!--
 
 <div id="header-wrapper">
 	<div id="header" class="container">
@@ -105,7 +105,7 @@ https://www.iconfinder.com/marcosebald
 	</ul>
 </div>
 
-</!-->
+-->
 
 </body>
 </html>
