--- a/words/matlab.html
+++ b/words/matlab.html
@@ -50,15 +50,19 @@ https://www.iconfinder.com/marcosebald
 	<HR color="#AAAAAA">
 
  	<h2>Runge-Kutta Method</h2>
-	<script src="https://gist.github.com/ConnorSprague/753419be5b39a8319b9b.js"></script>
+	<script src="https://gist.github.com/ConnorSprague/f25e6c116b3e37fc3723.js"></script>
 	<div class="buffer"></div>
 	
 	<h2>Navier-Stokes Method</h2>
 	<script src="https://gist.github.com/ConnorSprague/753419be5b39a8319b9b.js"></script>
 	<div class="buffer"></div>
 	
+	<h2>Keplers Equation Solver</h2>
+	<script src="https://gist.github.com/ConnorSprague/5fa330881098b0daaea3.js"></script>
+	<div class="buffer"></div>
+	
 	<h2>Newtons Method</h2>
-	<script src="https://gist.github.com/ConnorSprague/753419be5b39a8319b9b.js"></script>
+	<script src="https://gist.github.com/ConnorSprague/ebc17e2fce705acfcdbc.js"></script>
 	<div class="buffer"></div>
 	
 	<h2>Eulers Method</h2>
