--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@ https://www.iconfinder.com/marcosebald
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
+<link rel="icon" type="image/png" href="https://cloud.githubusercontent.com/assets/16012579/12364939/3f4a9e84-bb97-11e5-906c-40af48fdf731.png" sizes="16x16" />
+<title>Home</title>
+<meta name="keywords" content="Landing Page, Personal Webpage, Connor Sprague" />
+<meta name="description" content="Personal webpage landing page" />
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
@@ -50,6 +51,7 @@ https://www.iconfinder.com/marcosebald
     	
 <div class="title">
 	  <h2>Welcome to my website</h2>
+	  <HR color="#AAAAAA">
 		</div>
 		<p><strong>Hi</strong>, my name is <strong>Connor Sprague.</strong></p>
 		<p>This website is an opportunity for myself to showcase my talents, works, ramblings, and ambitions in one easy to navigate source.</p>
@@ -82,7 +84,7 @@ https://www.iconfinder.com/marcosebald
 	</div>
 </div>
 <div id="copyright">
-	<p>&copy; Untitled. All rights reserved. </a>.</p>
+	<p>&copy; Untitled. All rights reserved. </p>
 	<ul class="contact">
 		<li><a href="https://www.facebook.com/connor.sprague.9" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454209/65343c90-95ea-11e5-80a7-b87bc5e321ab.png"></img></a></li>
 		<li><a href="https://www.linkedin.com/in/connor-sprague-30141b72" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454224/a51327d6-95ea-11e5-9d7a-7dd9b3195073.png"></img></a></li>
