--- a/words/matlab.html
+++ b/words/matlab.html
@@ -50,24 +50,25 @@ https://www.iconfinder.com/marcosebald
 	<HR color="#AAAAAA">
 
  	<h2>Runge-Kutta Method</h2>
+	<p>Method used to solve for take off distance of model plane.</p>
 	<script src="https://gist.github.com/ConnorSprague/f25e6c116b3e37fc3723.js"></script>
 	<div class="buffer"></div>
 	
 	<h2>Navier-Stokes Method</h2>
-	<script src="https://gist.github.com/ConnorSprague/753419be5b39a8319b9b.js"></script>
+	<p>Method used to solve internal stresses in 4 layer cross ply composite.</p>
+	<script src="https://gist.github.com/ConnorSprague/82e3484a8cb94149755f.js"></script>
 	<div class="buffer"></div>
 	
 	<h2>Keplers Equation Solver</h2>
+	<p>Method used to resolve vehicle orbit.</p>
 	<script src="https://gist.github.com/ConnorSprague/5fa330881098b0daaea3.js"></script>
 	<div class="buffer"></div>
 	
 	<h2>Newtons Method</h2>
+	<p>Method used to solve flight take-off parameters.</p>
 	<script src="https://gist.github.com/ConnorSprague/ebc17e2fce705acfcdbc.js"></script>
 	<div class="buffer"></div>
 	
-	<h2>Eulers Method</h2>
-	<script src="https://gist.github.com/ConnorSprague/753419be5b39a8319b9b.js"></script>
-	<div class="buffer"></div>
 </div>
 
 <div class="buffer">
@@ -97,7 +98,7 @@ https://www.iconfinder.com/marcosebald
 	</div>
 </div>
 <div id="copyright">
-	<p>&copy; Untitled. All rights reserved. </p>
+	<p>&copy; Connor Sprague. All rights reserved. </p>
 	<ul class="contact">
 		<li><a href="https://www.facebook.com/connor.sprague.9" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454209/65343c90-95ea-11e5-80a7-b87bc5e321ab.png"></img></a></li>
 		<li><a href="https://www.linkedin.com/in/connor-sprague-30141b72" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454224/a51327d6-95ea-11e5-9d7a-7dd9b3195073.png"></img></a></li>
