--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@ https://www.iconfinder.com/marcosebald
 	  <h2>Welcome to my website</h2>
 	  <HR color="#AAAAAA">
 		</div>
-		<p><strong>Hi</strong>, my name is <strong>Connor Sprague.</strong></p>
+		<h2><strong>Hi</strong>, my name is <strong>Connor Sprague.</strong></h2>
 		<p>This website is an opportunity for myself to showcase my talents, works, ramblings, and ambitions in one easy to navigate source.</p>
-		<p></p>Under the <strong>Works</strong> page you will find models and designs I have done in the past, as well as projects that are currently in progress.
-		<p>Under the <strong>Words</strong> page you will find links to my published works. You will also find examples of programs and scripts I have written.</p>
-		<p>The <strong>Waterfall</strong> page is a place for the deluge of works or content I find amusing.</p>
+		<p style="float: left">Under the <strong>Works</strong> page you will find models and designs I have done in the past, as well as projects that are currently in progress.</p>
+		<p style="float: left">Under the <strong>Words</strong> page you will find links to my published works. You will also find examples of programs and scripts I have written.</p>
+		<p style="float: left">The <strong>Waterfall</strong> page is a place for the deluge of works or content I find amusing.</p>
 		
 	</div>
 	<div id="banner" class="container"><img src="https://daguchi.files.wordpress.com/2015/01/lego-print-ad.jpg" width="1200" height="350" alt="" /></div>
@@ -83,8 +83,8 @@ https://www.iconfinder.com/marcosebald
 		</div>
 	</div>
 </div>
-<div id="copyright">
-	<p>&copy; Untitled. All rights reserved. </p>
+<div id="copyright" style="background:#2056ac">
+	<p>&copy; Connor Sprague. All rights reserved. </p>
 	<ul class="contact">
 		<li><a href="https://www.facebook.com/connor.sprague.9" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454209/65343c90-95ea-11e5-80a7-b87bc5e321ab.png"></img></a></li>
 		<li><a href="https://www.linkedin.com/in/connor-sprague-30141b72" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454224/a51327d6-95ea-11e5-9d7a-7dd9b3195073.png"></img></a></li>
