--- a/contact.html
+++ b/contact.html
@@ -40,32 +40,90 @@ https://www.iconfinder.com/marcosebald
 				<li><a href="index.html" accesskey="1" title="">Homepage</a></li>
 				<li><a href="works/works.html" accesskey="2" title="">Works</a></li>
 				<li><a href="words/words.html" accesskey="3" title="">Words</a></li>
-				<li><a href="contact.html" accesskey="4" title="" class="active">Waterfall</a></li>
+				<li><a href="contact.html" accesskey="4" title="" class="active">Me</a></li>
 			</ul>
 		</div>
 	</div>
 </div>
+<div class="buffer-small"></div>
 <div class="wrapper">
-	<div id="#" class="container"><img src="https://www.explainxkcd.com/wiki/images/a/ae/location_sharing.png" width="1200" height="400" alt="" /></div>
+	<div id="#" class="container">
+
+	<div class="buffer-small"></div>
+		<div>
+			<h2>Family</h2>
+			<HR color="#AAAAAA">
+			<p>I am the eldest child in my family. I have two brothers named Easton and Rieder.</p>
+		</div>
+		
+		<div id="left">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12399660/fe552e66-bde0-11e5-8fa0-39a5f28a6a0a.jpg">
+		</div>
+		<div id="right">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12399668/059c1a04-bde1-11e5-8835-8b259a418857.jpg">
+		</div>
+		<div class="clear"></div>
+	</div>
+	
+	<div class="buffer-small"></div>
+	
+	<div class="container">
+		<div>
+			<h2>I love bicycles.</h2>
+			<HR color="#AAAAAA">
+			<p>I have spent a large portion of my life on two wheels. I have been racing bicycles competitively since I was 5 years old.</p>
+		</div>
+		<div >
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400034/49a50e52-bde3-11e5-8861-159271f787d7.jpg">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400499/100abcc0-bde6-11e5-915e-7876b2ee50eb.jpg">
+		</div>
+		<div >
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400031/49a3079c-bde3-11e5-920c-6963da0a1b2f.jpg">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400032/49a31836-bde3-11e5-998c-5126f400cd23.jpg">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400037/49afb758-bde3-11e5-9deb-57b78b0c7341.jpg">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400036/49a860a2-bde3-11e5-9f66-7de30a65e394.jpg">
+		</div>
+	
+	</div>
+	
+	<div class="buffer-small"></div>
+	
+	<div class="container">
+		<div>
+			<h2>I love the outdoors.</h2>
+			<HR color="#AAAAAA">
+			<p>I am originally from West Michigan. I have always had a love for both beaches and forests. </p>
+		</div>
+		<div>
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400258/97153878-bde4-11e5-9192-f4bff202dd0b.jpg">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400257/97151578-bde4-11e5-99f9-e18aa17dd26f.jpg">
+		</div>
+		<div>
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400259/971676c0-bde4-11e5-9408-1c1397761fa6.jpg">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400256/9714bf56-bde4-11e5-9df1-d39cc40f435c.jpg">
+		</div>
+	</div>
+	<div class="buffer-small"></div>
+	<div class="container">
+		<div>
+			<h2>I love to build things.</h2>
+			<HR color="#AAAAAA">
+			<p>From repairing motorcycles to building a Dr. Who themed vanity I enjoy designing and building things.</p>
+		</div>
+		<div>
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400987/f53aafa6-bde8-11e5-87b0-3540ced93cfa.jpg">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400986/f5391e20-bde8-11e5-93ef-214d09165884.jpg">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400985/f53698f8-bde8-11e5-8b68-9715d6c4a583.jpg">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400983/f535d53a-bde8-11e5-8f61-37ebf0b7014d.jpg">
+		</div>
+		<div>
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12401007/1d1f9202-bde9-11e5-895a-749e6dc38a91.jpg">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400989/f5404010-bde8-11e5-9d5c-0f6967e06534.jpg">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12400988/f53b939e-bde8-11e5-8b47-93cb75aaddc2.jpg">
+		</div>
+	</div>
 </div>
-<div class="wrapper">
-	<div id="#" class="container"><img src="http://41.media.tumblr.com/205ac03e1c1201d84c4fd1121a030df2/tumblr_mqs9eeV23G1sccdh7o1_500.png" width="900" height="400" alt="" /></div>
-</div>
-<div class="wrapper">
-	<div id="#" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568396/603b1298-99b1-11e5-9cb4-fa50a1caf9c0.jpg" width="1000" height="500" alt="" /></div>
-</div>
-<div class="wrapper">
-	<div id="#" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568412/712ba798-99b1-11e5-8aaf-7540850e7413.jpg" width="100%" height="500" alt="" /></div>
-</div>
-<div class="wrapper">
-	<div id="#" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568712/57b6f04a-99b3-11e5-8c9b-579c8e68cd85.jpg" width="100%" height="500" alt="" /></div>
-</div>
-<div class="wrapper">
-	<div id="#" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568728/6d58bda2-99b3-11e5-9085-9737430322b4.jpg" width="100%" height="500" alt="" /></div>
-</div>
-<div class="wrapper">
-	<div id="#" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568721/67f214c6-99b3-11e5-87d7-f0c2e802720b.png" width="800" height="800" alt="" /></div>
-</div>
+<div class="buffer-small"></div>
 <div id="footer">
 	<div class="container">
 		<div class="fbox1">
@@ -89,7 +147,7 @@ https://www.iconfinder.com/marcosebald
 	</div>
 </div>
 <div id="copyright">
-	<p>&copy; Untitled. All rights reserved.</p>
+	<p>&copy; Connor Sprague. All rights reserved.</p>
 	<ul class="contact">
 		<li><a href="https://www.facebook.com/connor.sprague.9" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454209/65343c90-95ea-11e5-80a7-b87bc5e321ab.png"></img></a></li>
 		<li><a href="https://www.linkedin.com/in/connor-sprague-30141b72" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454224/a51327d6-95ea-11e5-9d7a-7dd9b3195073.png"></img></a></li>
