--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ https://www.iconfinder.com/marcosebald
 				<li class="active"><a href="index.html" accesskey="1" title="">Homepage</a></li>
 				<li><a href="works/works.html" accesskey="2" title="">Works</a></li>
 				<li><a href="words/words.html" accesskey="3" title="">Words</a></li>
-				<li><a href="contact.html" accesskey="4" title="">Waterfall</a></li>
+				<li><a href="contact.html" accesskey="4" title="">Me</a></li>
 			</ul>
 		</div>
 	</div>
@@ -54,7 +54,7 @@ https://www.iconfinder.com/marcosebald
 	  <HR color="#AAAAAA">
 		</div>
 		<h2><strong>Hi</strong>, my name is <strong>Connor Sprague.</strong></h2>
-		<p>This website is an opportunity for myself to showcase my talents, works, ramblings, and ambitions in one easy to navigate source.</p>
+		<p style="float: left">This website is an opportunity for myself to showcase my talents, works, ramblings, and ambitions in one easy to navigate source.</p>
 		<p style="float: left">Under the <strong>Works</strong> page you will find models and designs I have done in the past, as well as projects that are currently in progress.</p>
 		<p style="float: left">Under the <strong>Words</strong> page you will find links to my published works. You will also find examples of programs and scripts I have written.</p>
 		<p style="float: left">The <strong>Waterfall</strong> page is a place for the deluge of works or content I find amusing.</p>
