--- a/words/research.html
+++ b/words/research.html
@@ -39,7 +39,7 @@ https://www.iconfinder.com/marcosebald
 				<li><a href="../index.html" accesskey="1" title="">Homepage</a></li>
 				<li><a href="../works/works.html" accesskey="2" title="">Works</a></li>
 				<li><a href="words.html" accesskey="3" title="">Words</a></li>
-				<li><a href="../contact.html" accesskey="4" title="">Waterfall</a></li>
+				<li><a href="../contact.html" accesskey="4" title="">Me</a></li>
 			</ul>
 		</div>
 	</div>
@@ -113,7 +113,7 @@ https://www.iconfinder.com/marcosebald
 	</div>
 </div>
 <div id="copyright">
-	<p>&copy; Untitled. All rights reserved.</p>
+	<p>&copy; Connor Sprague. All rights reserved.</p>
 	<ul class="contact">
 		<li><a href="https://www.facebook.com/connor.sprague.9" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454209/65343c90-95ea-11e5-80a7-b87bc5e321ab.png"></img></a></li>
 		<li><a href="https://www.linkedin.com/in/connor-sprague-30141b72" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454224/a51327d6-95ea-11e5-9d7a-7dd9b3195073.png"></img></a></li>
