--- a/works/hpv.html
+++ b/works/hpv.html
@@ -40,7 +40,7 @@ https://www.iconfinder.com/marcosebald
 				<li><a href="../index.html" accesskey="1" title="">Homepage</a></li>
 				<li><a href="works.html" accesskey="2" title="">Works</a></li>
 				<li><a href="../words/words.html" accesskey="3" title="">Words</a></li>
-				<li><a href="../contact.html" accesskey="4" title="">Waterfall</a></li>
+				<li><a href="../contact.html" accesskey="4" title="">Me</a></li>
 			</ul>
 		</div>
 	</div>
