--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ https://www.iconfinder.com/marcosebald
 		<p style="float: left">This website is an opportunity for myself to showcase my talents, works, ramblings, and ambitions in one easy to navigate source.</p>
 		<p style="float: left">Under the <strong>Works</strong> page you will find models and designs I have done in the past, as well as projects that are currently in progress.</p>
 		<p style="float: left">Under the <strong>Words</strong> page you will find links to my published works. You will also find examples of programs and scripts I have written.</p>
-		<p style="float: left">The <strong>Waterfall</strong> page is a place for the deluge of works or content I find amusing.</p>
+		<p style="float: left">The <strong>Me</strong> page is where you will find pictures of myself and my hobbies.</p>
 		
 	</div>
 	<div id="banner" class="container"><img src="https://daguchi.files.wordpress.com/2015/01/lego-print-ad.jpg" width="1200" height="350" alt="" /></div>
