--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,10 @@ https://www.iconfinder.com/marcosebald
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
+<link rel="icon" type="image/png" href="https://cloud.githubusercontent.com/assets/16012579/12364939/3f4a9e84-bb97-11e5-906c-40af48fdf731.png" sizes="16x16" />
+<title>Me</title>
+<meta name="keywords" content="Connor Sprague" />
+<meta name="description" content="Personal pictures of hobbies" />
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
@@ -45,8 +46,9 @@ https://www.iconfinder.com/marcosebald
 		</div>
 	</div>
 </div>
-<div class="buffer-small"></div>
+
 <div class="wrapper">
+<div class="buffer-small"></div>
 	<div id="#" class="container">
 
 	<div class="buffer-small"></div>
