--- a/words/web.html
+++ b/words/web.html
@@ -52,6 +52,15 @@ https://www.iconfinder.com/marcosebald
  	<p>Description: CharityMe is a mobile and web based service designed for the Missouri University of Science and Technology's 50th Anniversary Hackathon. The goal of the Project was to create a web or mobile service that bettered society. 
 	Our team created a service that would allow for users to post, browse, and search for charities. These charities could include institutions or individual users offering up goods or services for free. 
 	The idea was to make a 'craigslist' type service that was focused entirely around free goods and services.</p>
+	
+	<div class="container">
+	<h2>Promo Video</h2>
+	<HR color="#AAAAAA">
+	<div class="video-center">
+	<iframe width="854" height="480" src="https://www.youtube.com/embed/iHDITMSFfPg" frameborder="0" allowfullscreen></iframe>
+	</div>
+	</div>
+	
   <!-- The container is used to define the width of the slideshow -->
   <div class="container">
     <div id="slides">
