--- a/works/works.html
+++ b/works/works.html
@@ -55,21 +55,21 @@ https://www.iconfinder.com/marcosebald
 				<a href="simplysolar.html"><img src="https://cloud.githubusercontent.com/assets/16012579/12282961/2af0126a-b968-11e5-9e56-a34181bbb2aa.png" class="column-image"></a>
 			</div>
 			<p>An affordable, durable, modular solar collection and storage concept for use in public spaces.</p>
-			<a href="pubworks.html" class="button">Explore</a> </div>
+			<a href="pubworks.html" class="button border1">Explore</a> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2 href="cb.html">Curetteblade</h2>
 				<a href="cb.html"><img src="https://cloud.githubusercontent.com/assets/16012579/12244653/58cc945a-b86a-11e5-9a1a-a4b17fa565d3.png" class="column-image"></a>
 			</div>
 			<p>A new approach to disposable medical devices. Inludes designs for the manufacturing process utilized.</p>
-			<a href="cb.html" class="button">Explore</a> </div>
+			<a href="cb.html" class="button border1">Explore</a> </div>
 		<div id="tbox3">
 			<div class="title">
 				<h2 href="hpv.html">Human Powered Vehicle</h2>
 				<a href="hpv.html"><img src="https://cloud.githubusercontent.com/assets/16012579/12244737/ad5e029c-b86a-11e5-9b09-e5888c09c9bf.PNG" class="column-image"></a>
 			</div>
 			<p>I participated in the <a href="https://orgsync.com/66296/chapter"> Missouri S&T Human Powered Vehicle</a> team as the Lead Fairing Engineer.</p>
-			<a href="simplysolar.html" class="button">Explore</a> </div>
+			<a href="simplysolar.html" class="button border1">Explore</a> </div>
 	</div>
 
 </div>   	
