--- a/index.html
+++ b/index.html
@@ -54,13 +54,29 @@ https://www.iconfinder.com/marcosebald
 	  <HR color="#AAAAAA">
 		</div>
 		<h2><strong>Hi</strong>, my name is <strong>Connor Sprague.</strong></h2>
-		<p style="float: left">This website is an opportunity for myself to showcase my talents, works, ramblings, and ambitions in one easy to navigate source.</p>
-		<p style="float: left">Under the <strong>Works</strong> page you will find models and designs I have done in the past, as well as projects that are currently in progress.</p>
-		<p style="float: left">Under the <strong>Words</strong> page you will find links to my published works. You will also find examples of programs and scripts I have written.</p>
-		<p style="float: left">The <strong>Me</strong> page is where you will find pictures of myself and my hobbies.</p>
+		<p style="float: left">I built this website as a way to display things I have worked on in one easy to navigate location. I intend for this website to constantly evolve with me as my academic and professional career progresses.
+		You will be able to find highlights of projects I have worked on in the past as well as projects I am currently working on. Outlined below are the pages of this site as well as the content you can find on them.</p>
+		<div class="clear buffer1"></div>
+		<div id="three-column">
+			<ul id="tbox1">
+				<li><a href="works/works.html"><h3>Works</h3></a></li>
+				<li><a href="works/works.html"><img class="3images" src="https://cloud.githubusercontent.com/assets/16012579/12405470/2359c0fe-be0a-11e5-809a-7db7121228e4.jpg" ></a></li>
+				<li><p>On this page you can find information and pictures of physical designs I have worked on or are currently in progress.</p></li>
+			</ul>
+			<ul id="tbox2">			
+				<li><a href="words/words.html"><h3>Words</h3></a></li>
+				<li><a href="words/words.html"><img class="3images" src="https://cloud.githubusercontent.com/assets/16012579/12405472/23650a5e-be0a-11e5-974d-9fb5d81b6766.jpg" ></a></li>
+				<li><p>On this page you can find details and information on code based projects I have worked on or am currently working on.</p></li>
+			</ul>	
+			<ul id="tbox3">	
+				<li><a href="contact.html"><h3>Me</h3></a></li>
+				<li><a href="contact.html"><img class="3images" src="https://cloud.githubusercontent.com/assets/16012579/12405471/2363db34-be0a-11e5-948d-6a10cf276361.jpg" ></a></li>
+				<li><p>This page serves as brief bio about myself showing mostly pictures of myself as well as hobbies.</p></li>
+			</ul>
+		</div>
 		
 	</div>
-	<div id="banner" class="container"><img src="https://daguchi.files.wordpress.com/2015/01/lego-print-ad.jpg" width="1200" height="350" alt="" /></div>
+
 <div id="footer">
 	<div class="container">
 		<div class="fbox1">
