--- a/words/words.html
+++ b/words/words.html
@@ -48,7 +48,9 @@ https://www.iconfinder.com/marcosebald
 </div>
 
  <div class="wrapper" id="wrapper1">
+	<div class="container">
  	<h1>Words</h1>	
+	</div>
 	<div id="three-column" class="container">
 
 		<div id="left" >
