--- a/works/works.html
+++ b/works/works.html
@@ -46,7 +46,9 @@ https://www.iconfinder.com/marcosebald
 </div>
 
  <div class="wrapper" id="wrapper1">
- <h1>Works</h1>
+	<div class="container">
+ 	<h1>Works</h1>	
+	</div>
 	<div id="three-column" class="container">
 		<div><span class="arrow-down"></span></div>
 		<div id="tbox1">
