--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,9 @@ https://www.iconfinder.com/marcosebald
 <div class="wrapper">
 <div class="buffer-small"></div>
 	<div id="#" class="container">
-
+		<h2>Resume</h2>
+		<HR color="#AAAAAA">
+		<iframe src="../pdfs/resume-winter-2015.pdf" style="width:100%; height:500px;" frameborder="0"></iframe>
 	<div class="buffer-small"></div>
 		<div>
 			<h2>Family</h2>
