--- a/works/works.html
+++ b/works/works.html
@@ -63,7 +63,7 @@ https://www.iconfinder.com/marcosebald
 				<h2 href="cb.html">Curetteblade</h2>
 				<a href="cb.html"><img src="https://cloud.githubusercontent.com/assets/16012579/12244653/58cc945a-b86a-11e5-9a1a-a4b17fa565d3.png" class="column-image"></a>
 			</div>
-			<p>A new approach to disposable medical devices. Inludes designs for the manufacturing process utilized.</p>
+			<p>A new approach to disposable medical devices. Includes designs for the manufacturing process utilized.</p>
 			<a href="cb.html" class="button border1">Explore</a> </div>
 		<div id="tbox3">
 			<div class="title">
