--- a/words/web.html
+++ b/words/web.html
@@ -47,11 +47,13 @@ https://www.iconfinder.com/marcosebald
 	</div>
 </div>
 <div id="wrapper1">
+	<div class="container">
  	<h1>Hackathon For Humanity-CharityMe Webpage</h1>
 	<HR color="#AAAAAA">
  	<p>Description: CharityMe is a mobile and web based service designed for the Missouri University of Science and Technology's 50th Anniversary Hackathon. The goal of the Project was to create a web or mobile service that bettered society. 
 	Our team created a service that would allow for users to post, browse, and search for charities. These charities could include institutions or individual users offering up goods or services for free. 
 	The idea was to make a 'craigslist' type service that was focused entirely around free goods and services.</p>
+	</div>
 	
 	<div class="container">
 	<h2>Promo Video</h2>
@@ -60,9 +62,11 @@ https://www.iconfinder.com/marcosebald
 	<iframe width="854" height="480" src="https://www.youtube.com/embed/iHDITMSFfPg" frameborder="0" allowfullscreen></iframe>
 	</div>
 	</div>
-	
+	<div class="buffer-small"></div>
   <!-- The container is used to define the width of the slideshow -->
   <div class="container">
+	<h2>Screen Shots</h2>
+	<HR color="#AAAAAA">
     <div id="slides">
       <img src="https://cloud.githubusercontent.com/assets/16012579/11764951/8f71c820-a10b-11e5-9c36-9b8f5819783a.PNG" alt="#">
       <img src="https://cloud.githubusercontent.com/assets/16012579/11764955/a49c7664-a10b-11e5-80c6-4c1c9ee55ec5.PNG" alt="#">
@@ -92,13 +96,14 @@ https://www.iconfinder.com/marcosebald
     $(function() {
       $('#slides').slidesjs({
         width: 940,
-        height: 528,
+        height: 450,
         navigation: false
       });
     });
   </script>
-
- 	<h1>Webpage Code</h1>
+ <div class="buffer-small" style="background:#FFFFFF"></div>
+<div class="container">
+ 	<h2>Webpage Code</h2>
 	<HR color="#AAAAAA">
 	<script src="https://gist.github.com/ConnorSprague/753419be5b39a8319b9b.js"></script>
 </div>
@@ -106,7 +111,7 @@ https://www.iconfinder.com/marcosebald
 <div class="buffer">
 	
 </div>
-<div id="banner" class="wrapper img-centered"><img src="https://imgs.xkcd.com/comics/new_car.png" width="100%" height="250" alt="" /></div>
+
 <div id="footer">
 	<div class="container">
 		<div class="fbox1">
@@ -129,7 +134,7 @@ https://www.iconfinder.com/marcosebald
 		</div>
 	</div>
 </div>
-<div id="copyright">
+<div id="copyright" style="background: #2056ac">
 	<p>&copy; Connor Sprague. All rights reserved. </p>
 	<ul class="contact">
 		<li><a href="https://www.facebook.com/connor.sprague.9" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454209/65343c90-95ea-11e5-80a7-b87bc5e321ab.png"></img></a></li>
