--- a/words/web.html
+++ b/words/web.html
@@ -111,7 +111,7 @@ https://www.iconfinder.com/marcosebald
 <div class="buffer">
 	
 </div>
-
+</div>
 <div id="footer">
 	<div class="container">
 		<div class="fbox1">
