--- a/works/cb.html
+++ b/works/cb.html
@@ -69,7 +69,7 @@ https://www.iconfinder.com/marcosebald
 	<div id="banner" class="container" >
 		<p><b>S+A Technologies</b> is a small company based out of Rolla Missouri focused on medical innovations ranging from medical apparatus to telemedicine.</p>
 		<p><b>One such medical device is the S+A Technologies Dermal Curette.</b></p>
-		<p>Much like the dichotomy between reusable shaving razors and plastic disposable razors, S+A Dermal Curettes aim to combine the professional precision feel of tradiotion Dermal Curettes with the affordability and low maintenance of disposable curettes.</p>
+		<p>Much like the dichotomy between reusable shaving razors and plastic disposable razors, S+A Dermal Curettes aim to combine the professional precision feel of traditional Dermal Curettes with the affordability and low maintenance of disposable curettes.</p>
 		<p>S+A Dermal Curettes utilize an easy to exchange stainless steel blade mounted on a stainless steel handle. Eliminating the ecological impact of disposable blades while sustaining the precision of traditional systems.</p>
 	</div>
 	<div class="container">
@@ -84,19 +84,20 @@ https://www.iconfinder.com/marcosebald
 	<h2>Project Pictures</h2>
 	<HR color="#AAAAAA">
     		<div id="slides" class="#">
-		<img src="https://cloud.githubusercontent.com/assets/16012579/12335910/27438ace-bac7-11e5-8347-2108f82c7477.png" alt="#">
-		<img src="https://cloud.githubusercontent.com/assets/16012579/12283671/2fe2d1d0-b96e-11e5-9f1b-9f0caf0f8a3e.jpg" alt="#">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12335910/27438ace-bac7-11e5-8347-2108f82c7477.png" alt="#">
+			<img src="https://cloud.githubusercontent.com/assets/16012579/12283671/2fe2d1d0-b96e-11e5-9f1b-9f0caf0f8a3e.jpg" alt="#">
       		<img src="https://cloud.githubusercontent.com/assets/16012579/12337164/02efeb0c-bace-11e5-8341-b50042e0890a.jpg" alt="#">
-      	      	<img src="https://cloud.githubusercontent.com/assets/16012579/12337068/7a4e0900-bacd-11e5-9d23-fef2ef3ca7ec.JPG" alt="#">      		
+      	    <img src="https://cloud.githubusercontent.com/assets/16012579/12337068/7a4e0900-bacd-11e5-9d23-fef2ef3ca7ec.JPG" alt="#">      		
       		<img src="https://cloud.githubusercontent.com/assets/16012579/12336059/f606ba5c-bac7-11e5-913f-1983a1cc7ea3.JPG" alt="#">
       		<img src="https://cloud.githubusercontent.com/assets/16012579/12336058/f602378e-bac7-11e5-9c37-a7d15c7f8b2d.JPG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/12336001/9ab23b04-bac7-11e5-8aab-09f6e4303dff.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12649693/54cfec4c-c5a5-11e5-92a4-132b3706aafb.jpg" alt="#">
       		<img src="https://cloud.githubusercontent.com/assets/16012579/12335908/2741077c-bac7-11e5-9731-eeda5caef344.PNG" alt="#">
       		<img src="https://cloud.githubusercontent.com/assets/16012579/12283703/8d5a5504-b96e-11e5-9684-491ff4bc8f08.gif" alt="#">
       		<img src="https://cloud.githubusercontent.com/assets/16012579/12283705/8d5cda40-b96e-11e5-9f38-fd0d05a7651c.gif" alt="#">
       		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
       		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
     		</div>
+			
     		<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   		<script src="../words/jquery.slides.min.js"></script>
 	</div>    		
