Homepage wrapper fix
simple fix

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ https://www.iconfinder.com/marcosebald
 		</div>
 		
 	</div>
-
+</div>
 <div id="footer">
 	<div class="container">
 		<div class="fbox1">
