--- a/contact.html
+++ b/contact.html
@@ -52,12 +52,12 @@ https://www.iconfinder.com/marcosebald
 	<div id="#" class="container">
 		<h2>Resume</h2>
 		<HR color="#AAAAAA">
-		<iframe src="../pdfs/resume-winter-2015.pdf" style="width:100%; height:500px;" frameborder="0"></iframe>
+		<iframe src="../pdfs/resume-summer2016_websafe.pdf" style="width:100%; height:500px;" frameborder="0"></iframe>
 	<div class="buffer-small"></div>
 		<div>
 			<h2>Family</h2>
 			<HR color="#AAAAAA">
-			<p>I am the eldest child in my family. I have two brothers named Easton and Rieder.</p>
+			<p>I am the eldest child in my family. I have two brothers; Easton and Rieder.</p>
 		</div>
 		
 		<div id="left">
@@ -75,7 +75,7 @@ https://www.iconfinder.com/marcosebald
 		<div>
 			<h2>I love bicycles.</h2>
 			<HR color="#AAAAAA">
-			<p>I have spent a large portion of my life on two wheels. I have been racing bicycles competitively since I was 5 years old.</p>
+			<p>I've spent a large portion of my life on two wheels. I've been racing bicycles competitively since I was 5 years old.</p>
 		</div>
 		<div >
 			<img src="https://cloud.githubusercontent.com/assets/16012579/12400034/49a50e52-bde3-11e5-8861-159271f787d7.jpg">
